--- a/partials/about.html
+++ b/partials/about.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kempton Portfolio</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css" type='text/css'>
-</head>
-<body background="images/cheap_diagonal_fabric.png">
-    <nav class="navbar navbar-default" id="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" id="name" href="index.html">Christopher Kempton</a>
-            </div>
-            <div>
-                <ul class="nav navbar-nav navbar-right" id="nav-link">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<section id="page">
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
@@ -55,5 +31,4 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+</section>
