Refactor app.js

--- a/partials/contact.html
+++ b/partials/contact.html
@@ -49,11 +49,11 @@
             <div class="row">
                   <form id="changeString">
                     <div class="col-sm-12 form-input">
-                        <h3>Type in something to make it exciting!</h3>
+                        <h3 id="addExheader">Type in something to make it exciting!</h3>
                         <input id="addExBox" class="input" name="string" type="text" placeholder="Something cool" required>
                     </div>
                     <div class="col-sm-12">
-                        <button id="addEx" class="submit" type="button" onclick="app.makeChange()" value="make exciting">Exite Me</button>
+                        <button id="addEx" class="submit" type="button" onclick="makeChange()" value="make exciting">Exite Me</button>
                     </div>
                 </form>
             </div>
